--- a/about.html
+++ b/about.html
@@ -16,7 +16,13 @@
 
 	<section id="container">
 		<div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p style="font-size: 26px; text-shadow: 1.5px 1px #ccc;">
+				Truth or dare is a fun game to play with your friends, especially at sleepovers and during other times when you probably won’t be disturbed by siblings, parents, or pets. While things might get weird and sometimes uncomfortable, truth or dare is often really funny as well.
+<br><br>
+				Truth or dare? is a mostly verbal party game requiring two or more players. Players are given the choice between answering a question truthfully, or performing a "dare", both of which are set by the other players.
+<br><br>
+				Players must performing the dare they are given, or truthfully answer the question asked. Players are not permitted to change their mind about choosing "truth" or "dare". otherways there is a punishment! ^_^
+			</p>
 		</div>
 	</section>
 
